# comp-utilities

./: .gitignore  CMakeLists.txt  Makefile  README.md  comp_util_make_docs.pro  comp_util_make_userdocs.pro  configure.sh  overview.txt
lib/: CMakeLists.txt  mg_fits_browser.pro  mg_mysql.dlm
scripts/: CMakeLists.txt  complog
src/: CMakeLists.txt  another_query.txt  comp_aia_lct.pro  comp_average_dialog.pro  comp_browser.pro  comp_compare_images.pro  comp_compute_average.pro  comp_db_browser.pro  comp_db_plot.pro  comp_db_query.pro  comp_dir_browser.pro  comp_get_type.pro  comp_inventory.pro  comp_log_browser.pro  comp_log_viewer.pro  comp_newest_file.pro  comp_plot_crosstalkparams.pro  comp_query_file.pro  comp_run_browser.pro  comp_sigma_plot.pro  comp_spectral_profile.pro  comp_times2str.pro  comp_write_all_headers.pro  kcor_synoptic_plot.pro  mlso_lct.pro  query.txt  redtemp1.lut  simple.txt
